--- a/rust/server/Cargo.toml
+++ b/rust/server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "3"
 log = "0.4.14"
+env_logger = "0.9.0"
 serde = "1.0.131"
 serde_json = "1.0.72"
 libloading = "0.7.2"
