--- a/rust/builder/Dockerfile
+++ b/rust/builder/Dockerfile
@@ -7,7 +7,7 @@ FROM ${BUILDER_IMAGE}
 FROM rust:${RUST_VERSION}-alpine${ALPINE_VERSION}
 
 RUN apk update && \
-    apk add jq
+    apk add jq musl-dev
 
 COPY --from=0 /builder /builder
 ADD build.sh /usr/local/bin/build
