--- a/rust/Makefile
+++ b/rust/Makefile
@@ -1,6 +1,7 @@
 -include ../rules.mk
 
-PLATFORMS = linux/amd64,linux/arm64/v8
+PLATFORMS = linux/amd64#,linux/arm64/v8
+#PLATFORMS = linux/arm64/v8
 
 REPO = glutamat
 
